--- a/tournament.html
+++ b/tournament.html
@@ -1,255 +1,254 @@
 <!DOCTYPE html>
-
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Table Tennis Tournament</title>
-  <style>
-    body {
-      font-family: 'Poppins', sans-serif;
-      margin: 0;
-      padding: 15px;
-      background: #121212;
-      color: #f5f5f5;
-      text-align: center;
-    }
-
-```
-h1 {
-  color: #00ff90;
-  font-size: 1.8rem;
-  margin-bottom: 10px;
-}
-
-h2 {
-  color: #fff;
-  font-size: 1.3rem;
-  margin-top: 30px;
-  margin-bottom: 10px;
-  border-bottom: 1px solid #00ff90;
-  display: inline-block;
-  padding-bottom: 5px;
-}
-
-table {
-  width: 100%;
-  border-collapse: collapse;
-  margin-bottom: 20px;
-  font-size: 0.9rem;
-}
-
-th, td {
-  border: 1px solid #444;
-  padding: 8px;
-  text-align: center;
-}
-
-th {
-  background: #00ff90;
-  color: #000;
-  font-weight: bold;
-}
-
-tr:nth-child(even) {
-  background: #1e1e1e;
-}
-
-input[type="number"] {
-  width: 45px;
-  background: #333;
-  color: white;
-  border: 1px solid #555;
-  border-radius: 5px;
-  text-align: center;
-}
-
-button {
-  background-color: #00ff90;
-  border: none;
-  color: #000;
-  padding: 10px 15px;
-  font-weight: bold;
-  border-radius: 25px;
-  margin: 10px auto;
-  cursor: pointer;
-}
-
-button:hover {
-  background-color: #00cc70;
-}
-
-.match-section, .playoff-section, .finals-section {
-  background: #1a1a1a;
-  border-radius: 12px;
-  padding: 10px;
-  margin: 15px 0;
-  box-shadow: 0px 0px 10px rgba(0,255,144,0.2);
-}
-
-.small-text {
-  font-size: 0.8rem;
-  color: #aaa;
-}
-
-@media (max-width: 600px) {
-  table, th, td {
-    font-size: 0.8rem;
-  }
-  input[type="number"] {
-    width: 35px;
-  }
-}
-```
-
-  </style>
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width,initial-scale=1" />
+<title>Table Tennis — Tournament</title>
+<style>
+  :root{--bg:#070707;--accent:#00ff90;--card:#1b1b1b}
+  html,body{height:100%;margin:0;font-family:Inter,system-ui,Arial;background:linear-gradient(#080808,#050505);color:#fff}
+  .wrap{padding:14px;max-width:720px;margin:0 auto}
+  h1{color:var(--accent);font-size:1.2rem;margin:6px 0}
+  .section{background:var(--card);padding:10px;border-radius:12px;margin-top:12px;box-shadow:0 6px 20px rgba(0,255,144,0.06)}
+  table{width:100%;border-collapse:collapse;font-size:0.92rem}
+  th,td{padding:8px;border-bottom:1px solid rgba(255,255,255,0.04);text-align:center}
+  th{background:rgba(0,0,0,0.25);color:#ddd;font-weight:700}
+  input[type="number"]{width:56px;border-radius:6px;padding:6px;border:1px solid #333;background:#111;color:#fff}
+  .btn{display:inline-block;background:var(--accent);color:#002;padding:10px 14px;border-radius:20px;margin:10px 4px;font-weight:700;border:none}
+  .muted{color:#a7a7a7;font-size:0.9rem}
+  @media(max-width:420px){ input[type="number"]{width:44px;font-size:14px} th,td{font-size:0.86rem} }
+  .playoff, .finals {margin-top:12px;padding:8px;border-radius:8px;background:rgba(0,0,0,0.12)}
+  .small{font-size:0.85rem;color:#cfcfcf}
+</style>
 </head>
 <body>
-  <h1>Table Tennis Champions</h1>
-  <div class="match-section">
-    <h2>Round Robin Matches</h2>
-    <table id="matchTable">
-      <thead>
-        <tr>
-          <th>Player 1</th>
-          <th>Player 2</th>
-          <th>Score 1</th>
-          <th>Score 2</th>
-        </tr>
-      </thead>
-      <tbody></tbody>
-    </table>
-    <button id="updatePoints">Update Points</button>
+  <div class="wrap">
+    <h1>🏓 Round Robin — Tournament</h1>
+
+    <div class="section">
+      <h3 class="small">Matches</h3>
+      <div style="overflow:auto">
+        <table id="matchesTable">
+          <thead><tr><th>#</th><th>Player 1</th><th>Score</th><th>Player 2</th><th>Score</th></tr></thead>
+          <tbody></tbody>
+        </table>
+      </div>
+      <div style="text-align:center"><button id="updateBtn" class="btn">Update Points</button></div>
+      <div class="muted small">Enter match scores then tap Update Points to recalc standings.</div>
+    </div>
+
+    <div class="section">
+      <h3 class="small">Points Table</h3>
+      <div style="overflow:auto">
+        <table id="pointsTable">
+          <thead><tr><th>Pos</th><th>Player</th><th>Played</th><th>W</th><th>L</th><th>Pts</th><th>NPR</th></tr></thead>
+          <tbody></tbody>
+        </table>
+      </div>
+    </div>
+
+    <div id="playoffBox" class="section" style="display:none">
+      <h3 class="small">Playoffs (Top 4)</h3>
+      <div id="playoffsArea"></div>
+    </div>
+
+    <div id="finalBox" class="section" style="display:none">
+      <h3 class="small">Final</h3>
+      <div id="finalArea"></div>
+    </div>
+
   </div>
 
-  <div class="match-section">
-    <h2>Points Table</h2>
-    <table id="pointsTable">
-      <thead>
-        <tr>
-          <th>Pos</th>
-          <th>Player</th>
-          <th>Points</th>
-          <th>Net Point Rate</th>
-        </tr>
-      </thead>
-      <tbody></tbody>
-    </table>
-  </div>
+<script>
+/* Read selected players from URL param */
+const url = new URL(window.location.href);
+const param = url.searchParams.get('players') || '[]';
+let selectedPlayers;
+try { selectedPlayers = JSON.parse(decodeURIComponent(param)); }
+catch(e){ selectedPlayers = []; }
 
-  <div class="playoff-section" id="playoffsSection" style="display:none;">
-    <h2>Playoffs</h2>
-    <div id="playoffs"></div>
-  </div>
+/* Safety: if none provided, default to all 7 (for local testing) */
+if(!Array.isArray(selectedPlayers) || selectedPlayers.length===0){
+  selectedPlayers = ["Kartik","Priyansh","Mradul","Bhavya","Arnav","Kautik","Mann"];
+}
 
-  <div class="finals-section" id="finalsSection" style="display:none;">
-    <h2>Finals</h2>
-    <div id="finals"></div>
-  </div>
+/* Generate all unique round robin fixtures then shuffle */
+function genFixtures(players){
+  const list=[];
+  for(let i=0;i<players.length;i++){
+    for(let j=i+1;j<players.length;j++){
+      list.push({p1:players[i], p2:players[j], s1: '', s2: ''});
+    }
+  }
+  // shuffle
+  for(let i=list.length-1;i>0;i--){
+    const r=Math.floor(Math.random()*(i+1));
+    [list[i],list[r]]=[list[r],list[i]];
+  }
+  return list;
+}
 
-  <script>
-    const urlParams = new URLSearchParams(window.location.search);
-    const selectedPlayers = JSON.parse(urlParams.get("players")) || [];
+let matches = genFixtures(selectedPlayers);
 
-    const matchTableBody = document.querySelector("#matchTable tbody");
-    const pointsTableBody = document.querySelector("#pointsTable tbody");
-    const playoffsDiv = document.getElementById("playoffs");
-    const finalsDiv = document.getElementById("finals");
-    const playoffsSection = document.getElementById("playoffsSection");
-    const finalsSection = document.getElementById("finalsSection");
+/* create match rows */
+const matchesTbody = document.querySelector('#matchesTable tbody');
+function renderMatches(){
+  matchesTbody.innerHTML = '';
+  matches.forEach((m, idx)=>{
+    const tr = document.createElement('tr');
+    tr.innerHTML = `<td>${idx+1}</td>
+      <td>${m.p1}</td>
+      <td><input type="number" min="0" step="1" id="m_s1_${idx}" value="${m.s1}"></td>
+      <td>${m.p2}</td>
+      <td><input type="number" min="0" step="1" id="m_s2_${idx}" value="${m.s2}"></td>`;
+    matchesTbody.appendChild(tr);
+  });
+}
+renderMatches();
 
-    let matches = [];
-    let points = {};
+/* stats object */
+let stats = {};
+function resetStats(){
+  stats = {};
+  selectedPlayers.forEach(p => {
+    stats[p] = {played:0, won:0, lost:0, points:0, scored:0, conceded:0, npr:0};
+  });
+}
 
-    selectedPlayers.forEach(p => {
-      points[p] = { points: 0, scored: 0, conceded: 0, npr: 0 };
-    });
+/* update points from inputs */
+function updatePoints(){
+  resetStats();
+  matches.forEach((m,idx)=>{
+    const s1 = parseInt(document.getElementById(`m_s1_${idx}`).value) || 0;
+    const s2 = parseInt(document.getElementById(`m_s2_${idx}`).value) || 0;
+    m.s1 = s1; m.s2 = s2;
+    // skip if both zero and unplayed? We'll count zero-zero as played if user typed zeros.
+    const played = (s1 !== '' || s2 !== '') && !(s1===0 && s2===0 && document.getElementById(`m_s1_${idx}`).value==='' && document.getElementById(`m_s2_${idx}`).value==='');
+    // treat empty as 0 but not played - simpler: if both input boxes blank -> skip
+    const blank1 = document.getElementById(`m_s1_${idx}`).value === '';
+    const blank2 = document.getElementById(`m_s2_${idx}`).value === '';
+    if(blank1 && blank2) return;
+    stats[m.p1].played++; stats[m.p2].played++;
+    stats[m.p1].scored += s1; stats[m.p1].conceded += s2;
+    stats[m.p2].scored += s2; stats[m.p2].conceded += s1;
+    if(s1 > s2){ stats[m.p1].won++; stats[m.p2].lost++; stats[m.p1].points += 2; }
+    else if(s2 > s1){ stats[m.p2].won++; stats[m.p1].lost++; stats[m.p2].points += 2; }
+    else { stats[m.p1].points += 1; stats[m.p2].points += 1; }
+  });
 
-    function generateFixtures(players) {
-      let allMatches = [];
-      for (let i = 0; i < players.length; i++) {
-        for (let j = i + 1; j < players.length; j++) {
-          allMatches.push([players[i], players[j]]);
-        }
-      }
-      return allMatches.sort(() => Math.random() - 0.5);
+  // compute NPR
+  selectedPlayers.forEach(p => {
+    stats[p].npr = stats[p].scored - stats[p].conceded;
+  });
+
+  // sort players by points desc then npr desc
+  const sorted = [...selectedPlayers].sort((a,b)=>{
+    if(stats[b].points !== stats[a].points) return stats[b].points - stats[a].points;
+    return stats[b].npr - stats[a].npr;
+  });
+
+  renderPoints(sorted);
+  renderPlayoffsAndFinals(sorted);
+}
+
+function renderPoints(sorted){
+  const tbody = document.querySelector('#pointsTable tbody');
+  tbody.innerHTML = '';
+  sorted.forEach((p, idx)=>{
+    const tr = document.createElement('tr');
+    tr.innerHTML = `<td>${idx+1}</td><td>${p}</td><td>${stats[p].played}</td><td>${stats[p].won}</td><td>${stats[p].lost}</td><td>${stats[p].points}</td><td>${stats[p].npr}</td>`;
+    tbody.appendChild(tr);
+  });
+}
+
+/* playoffs & finals generation with input scores support */
+function renderPlayoffsAndFinals(sorted){
+  const playBox = document.getElementById('playoffBox');
+  const finalBox = document.getElementById('finalBox');
+  const playArea = document.getElementById('playoffsArea');
+  const finArea = document.getElementById('finalArea');
+
+  playArea.innerHTML = ''; finArea.innerHTML = '';
+
+  if(selectedPlayers.length > 5){
+    // enable playoffs
+    playBox.style.display = 'block'; finalBox.style.display='block';
+    const p1 = sorted[0], p2 = sorted[1], p3 = sorted[2], p4 = sorted[3];
+
+    // Qualifier 1: p1 vs p2
+    const q1 = document.createElement('div');
+    q1.className='playoff';
+    q1.innerHTML = `<div><strong>Qualifier 1:</strong> ${p1} vs ${p2}</div>
+      <div style="margin-top:8px"><input id="q1_s1" type="number" min="0" placeholder="s1"> vs <input id="q1_s2" type="number" min="0" placeholder="s2"></div>`;
+
+    // Eliminator: p3 vs p4
+    const e1 = document.createElement('div');
+    e1.className='playoff';
+    e1.innerHTML = `<div><strong>Eliminator:</strong> ${p3} vs ${p4}</div>
+      <div style="margin-top:8px"><input id="e1_s1" type="number" min="0" placeholder="s1"> vs <input id="e1_s2" type="number" min="0" placeholder="s2"></div>`;
+
+    playArea.appendChild(q1); playArea.appendChild(e1);
+
+    // Qualifier 2 and Final will be computed live when user clicks "Compute Playoffs" button
+    const computeBtn = document.createElement('button');
+    computeBtn.className = 'btn';
+    computeBtn.innerText = 'Compute Playoffs';
+    computeBtn.onclick = computePlayoffs;
+    playArea.appendChild(computeBtn);
+
+    function computePlayoffs(){
+      // read qualifier1 and eliminator scores
+      const q1s1 = parseInt(document.getElementById('q1_s1').value) || 0;
+      const q1s2 = parseInt(document.getElementById('q1_s2').value) || 0;
+      const e1s1 = parseInt(document.getElementById('e1_s1').value) || 0;
+      const e1s2 = parseInt(document.getElementById('e1_s2').value) || 0;
+
+      let q1Winner, q1Loser, eWinner;
+      if(q1s1 > q1s2){ q1Winner = p1; q1Loser = p2; } else if(q1s2 > q1s1){ q1Winner = p2; q1Loser = p1; } else { q1Winner = p1; q1Loser = p2; } // tie fallback
+      if(e1s1 > e1s2){ eWinner = p3; } else if(e1s2 > e1s1){ eWinner = p4; } else { eWinner = p3; }
+
+      // Qualifier 2: q1Loser vs eWinner
+      const q2Html = document.createElement('div');
+      q2Html.className='playoff';
+      q2Html.innerHTML = `<div><strong>Qualifier 2:</strong> ${q1Loser} vs ${eWinner}</div>
+        <div style="margin-top:8px"><input id="q2_s1" type="number" min="0" placeholder="s1"> vs <input id="q2_s2" type="number" min="0" placeholder="s2"></div>
+        <div style="margin-top:6px"><button class="btn" id="q2Compute">Compute Q2 & Final</button></div>`;
+      // replace/append
+      // remove any existing q2 container first
+      const oldQ2 = document.getElementById('q2Container');
+      if(oldQ2) oldQ2.remove();
+      q2Html.id = 'q2Container';
+      playArea.appendChild(q2Html);
+
+      // when q2 computed, show final
+      document.getElementById('q2Compute').onclick = ()=>{
+        const q2s1 = parseInt(document.getElementById('q2_s1').value) || 0;
+        const q2s2 = parseInt(document.getElementById('q2_s2').value) || 0;
+        let q2Winner = q2s1 > q2s2 ? q1Loser : (q2s2 > q2s1 ? eWinner : q1Loser);
+        // show final area
+        finArea.innerHTML = `<div class="finals"><strong>Final:</strong> ${q1Winner} vs ${q2Winner}</div>
+          <div style="margin-top:8px"><input id="f_s1" type="number" min="0" placeholder="s1"> vs <input id="f_s2" type="number" min="0" placeholder="s2"></div>
+          <div style="margin-top:8px" class="small">Enter final score above. Results don't alter round-robin points automatically.</div>`;
+      };
     }
 
-    matches = generateFixtures(selectedPlayers);
+  } else {
+    // direct final between top2
+    playBox.style.display = 'none';
+    finalBox.style.display = 'block';
+    const finalists = sorted.slice(0,2);
+    finArea.innerHTML = `<div class="finals"><strong>Final:</strong> ${finalists[0]} vs ${finalists[1]}</div>
+      <div style="margin-top:8px"><input id="f_s1" type="number" min="0" placeholder="s1"> vs <input id="f_s2" type="number" min="0" placeholder="s2"></div>`;
+  }
+}
 
-    matches.forEach(match => {
-      const row = document.createElement("tr");
-      row.innerHTML = `
-        <td>${match[0]}</td>
-        <td>${match[1]}</td>
-        <td><input type="number" min="0" id="score_${match[0]}_${match[1]}_1"></td>
-        <td><input type="number" min="0" id="score_${match[0]}_${match[1]}_2"></td>
-      `;
-      matchTableBody.appendChild(row);
-    });
+/* attach update button */
+document.getElementById('updateBtn').addEventListener('click', updatePoints);
 
-    document.getElementById("updatePoints").addEventListener("click", updatePointsTable);
+/* initial calc to show empty table */
+updatePoints();
 
-    function updatePointsTable() {
-      selectedPlayers.forEach(p => {
-        points[p] = { points: 0, scored: 0, conceded: 0, npr: 0 };
-      });
-
-      matches.forEach(match => {
-        const s1 = parseInt(document.getElementById(`score_${match[0]}_${match[1]}_1`).value || 0);
-        const s2 = parseInt(document.getElementById(`score_${match[0]}_${match[1]}_2`).value || 0);
-        if (s1 === 0 && s2 === 0) return;
-
-        points[match[0]].scored += s1;
-        points[match[0]].conceded += s2;
-        points[match[1]].scored += s2;
-        points[match[1]].conceded += s1;
-
-        if (s1 > s2) points[match[0]].points += 2;
-        else if (s2 > s1) points[match[1]].points += 2;
-        else {
-          points[match[0]].points += 1;
-          points[match[1]].points += 1;
-        }
-      });
-
-      selectedPlayers.forEach(p => {
-        points[p].npr = points[p].scored - points[p].conceded;
-      });
-
-      const sorted = [...selectedPlayers].sort((a, b) => {
-        if (points[b].points === points[a].points) return points[b].npr - points[a].npr;
-        return points[b].points - points[a].points;
-      });
-
-      pointsTableBody.innerHTML = "";
-      sorted.forEach((p, idx) => {
-        const tr = document.createElement("tr");
-        tr.innerHTML = `<td>${idx + 1}</td><td>${p}</td><td>${points[p].points}</td><td>${points[p].npr}</td>`;
-        pointsTableBody.appendChild(tr);
-      });
-
-      if (selectedPlayers.length > 5) generatePlayoffs(sorted);
-      else generateFinals(sorted.slice(0, 2));
-    }
-
-    function generatePlayoffs(sorted) {
-      playoffsSection.style.display = "block";
-      finalsSection.style.display = "block";
-      const [p1, p2, p3, p4] = sorted.slice(0, 4);
-      playoffsDiv.innerHTML = `
-        <h3>Qualifier 1: ${p1} vs ${p2}</h3>
-        <h3>Eliminator: ${p3} vs ${p4}</h3>
-        <h3>Qualifier 2: Loser(Q1) vs Winner(Eliminator)</h3>`;
-      finalsDiv.innerHTML = `<h3>Finals: Winner(Q1) vs Winner(Q2)</h3>`;
-    }
-
-    function generateFinals(finalists) {
-      playoffsSection.style.display = "none";
-      finalsSection.style.display = "block";
-      finalsDiv.innerHTML = `<h3>Finals: ${finalists[0]} vs ${finalists[1]}</h3>`;
-    }
-  </script>
-
+/* optional: allow quickly clearing all scores */
+</script>
 </body>
 </html>
