--- a/tournament.html
+++ b/tournament.html
@@ -58,8 +58,7 @@
     </div>
   </div>
 
-  <!-- Moving Next Ball purely decorative -->
-  <div id="ball"></div>
+
 
 <script>
 /*
@@ -84,19 +83,43 @@ let matches = []; // {p1,p2,s1,s2}
 let stats = {};   // per player
 
 // create round-robin fixtures (all pairs) and shuffle
-function genFixtures(list){
+function genFixtures(list) {
+  // Step 1: Generate all pair combinations
   const arr = [];
-  for(let i=0;i<list.length;i++){
-    for(let j=i+1;j<list.length;j++){
-      arr.push({p1:list[i], p2:list[j], s1:'', s2:''});
+  for (let i = 0; i < list.length; i++) {
+    for (let j = i + 1; j < list.length; j++) {
+      arr.push({ p1: list[i], p2: list[j], s1: '', s2: '' });
     }
   }
-  for(let i=arr.length-1;i>0;i--){
-    const r=Math.floor(Math.random()*(i+1));
+
+  // Step 2: Shuffle the array randomly
+  for (let i = arr.length - 1; i > 0; i--) {
+    const r = Math.floor(Math.random() * (i + 1));
     [arr[i], arr[r]] = [arr[r], arr[i]];
   }
+
+  // Step 3: Fix consecutive duplicate players
+  for (let i = 1; i < arr.length; i++) {
+    const prev = arr[i - 1];
+    const curr = arr[i];
+    if (prev.p1 === curr.p1 || prev.p2 === curr.p2 || prev.p1 === curr.p2 || prev.p2 === curr.p1) {
+      // find a non-conflicting match to swap with
+      for (let j = i + 1; j < arr.length; j++) {
+        const next = arr[j];
+        if (
+          prev.p1 !== next.p1 && prev.p2 !== next.p2 &&
+          prev.p1 !== next.p2 && prev.p2 !== next.p1
+        ) {
+          [arr[i], arr[j]] = [arr[j], arr[i]];
+          break;
+        }
+      }
+    }
+  }
+
   return arr;
 }
+
 
 // render match input table
 const matchesTbody = document.querySelector('#matchesTable tbody');
@@ -311,18 +334,6 @@ function init(){
   renderPoints();
   renderPlayoffs();
 
-  // decorative moving ball animation
-  const ball = document.getElementById('ball');
-  let x = window.innerWidth/2 - 28, y = window.innerHeight - 120;
-  let vx = 2.4 + Math.random()*1.6, vy = -2.4 - Math.random()*1.6;
-  function step(){
-    x += vx; y += vy;
-    if(x <= 6 || x >= window.innerWidth - 62) vx *= -1;
-    if(y <= 6 || y >= window.innerHeight - 62) vy *= -1;
-    ball.style.left = x + 'px'; ball.style.top = y + 'px';
-    requestAnimationFrame(step);
-  }
-  requestAnimationFrame(step);
 }
 
 document.getElementById('updatePoints').addEventListener('click', updatePoints);
