--- a/tournament.html
+++ b/tournament.html
@@ -5,15 +5,173 @@
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <title>Table Tennis Tournament</title>
 <style>
+  /* ✅ Neon glowing heading */
+/* ✅ Green neon glowing heading */
+h1 {
+    --glow-color: rgb(0, 255, 144);
+    --glow-spread-color: rgba(0, 255, 144, 0.55);
+    --enhanced-glow-color: rgb(120, 255, 190);
+
+    font-size: 2.4em;
+    text-align: center;
+    color: var(--glow-color);
+    text-shadow:
+        0 0 0.4em var(--glow-color),
+        0 0 1.2em var(--glow-spread-color),
+        0 0 2em var(--glow-spread-color);
+    transition: all 0.3s ease-in-out;
+}
+
+h1:hover {
+    text-shadow:
+        0 0 0.7em var(--glow-color),
+        0 0 2.5em var(--glow-spread-color),
+        0 0 4em var(--enhanced-glow-color);
+}
+
+/* ✅ Green neon glowing button */
+.btn {
+    --glow-color: rgb(0, 255, 144);
+    --glow-spread-color: rgba(0, 255, 144, 0.75);
+    --enhanced-glow-color: rgb(120, 255, 190);
+    --btn-color: rgb(23, 211, 139);
+
+    border: 0.25em solid var(--glow-color);
+    padding: 0.7em 2em;
+    font-weight: bold;
+    border-radius: 0.8em;
+    cursor: pointer;
+    background-color: var(--btn-color);
+    color: black;   /* ✅ Always visible */
+    font-size: 15px;
+    outline: none;
+    position: relative;
+
+    box-shadow:
+        0 0 0.6em var(--glow-color),
+        0 0 1.5em var(--glow-spread-color),
+        inset 0 0 0.4em var(--glow-color);
+
+    text-shadow: 0 0 0.4em var(--glow-color);
+    transition: all 0.3s ease-in-out;
+}
+
+.btn:hover {
+    background-color: var(--glow-color);
+    color: var(--btn-color);
+    transform: scale(1.1);
+
+    box-shadow:
+        0 0 1em var(--glow-color),
+        0 0 3em var(--glow-spread-color),
+        inset 0 0 0.7em var(--enhanced-glow-color);
+}
+
+.btn:active {
+    transform: scale(0.95);
+    box-shadow:
+        0 0 0.4em var(--enhanced-glow-color),
+        0 0 1.8em var(--glow-spread-color),
+        inset 0 0 0.6em var(--enhanced-glow-color);
+}
+
+
   :root{--bg:#070707;--accent:#00ff90;--card:#111}
   body{margin:0;font-family:Inter,system-ui,Arial;background:linear-gradient(#0b0b0b,#070707);color:#fff}
   .wrap{padding:14px;max-width:900px;margin:0 auto}
-  h1{color:var(--accent);text-align:center;margin:6px 0;font-size:1.3rem}
-  table{width:100%;border-collapse:collapse;margin:12px 0}
-  th,td{padding:8px;border:1px solid rgba(255,255,255,0.06);text-align:center}
+
+  /* ✅ NEON GLOW TABLE */
+table {
+    width: 100%;
+    border-collapse: collapse;
+    margin: 12px 0;
+    
+    /* Green neon border + outer glow */
+    border: 2px solid rgba(0, 255, 144, 0.4);
+    border-radius: 10px;
+    overflow: hidden;
+
+    box-shadow:
+        0 0 0.4em rgba(0, 255, 144, 0.4),
+        0 0 1em rgba(0, 255, 144, 0.25),
+        0 0 2em rgba(0, 255, 144, 0.15);
+}
+
+th, td {
+    padding: 8px;
+    text-align: center;
+    border: 1px solid rgba(0, 255, 144, 0.1);
+}
+
+/* Header glow */
+th {
+    background-color: rgba(0, 255, 144, 0.08);
+    color: #00ff90;
+    font-weight: bold;
+
+    text-shadow:
+        0 0 0.3em rgba(0,255,144,1),
+        0 0 0.6em rgba(0,255,144,0.5);
+}
+
+/* Row hover neon effect */
+tbody tr:hover {
+    background-color: rgba(0, 255, 144, 0.15);
+    transition: 0.25s ease-in-out;
+
+    box-shadow:
+        inset 0 0 1em rgba(0,255,144,0.3),
+        0 0 1em rgba(0,255,144,0.25);
+}
+
+.section {
+    box-shadow: 0 0 0.7em rgba(0,255,144,0.25);
+    border: 1px solid rgba(0,255,144,0.25);
+}
+
+
   th{background:rgba(0,0,0,0.3);color:#e6ffe9}
-  input[type="number"]{width:60px;padding:6px;border-radius:6px;border:1px solid #333;background:#0e0e0e;color:#fff}
-  .btn{background:var(--accent);color:#002;border:none;padding:10px 14px;border-radius:20px;font-weight:700;cursor:pointer}
+
+  
+/* ✅ Default neon border */
+input[type="number"] {
+    width: 60px;
+    padding: 6px;
+    border-radius: 8px;
+    border: 2px solid rgba(0,255,144,0.4);
+    background: rgba(0, 0, 0, 0.5);
+    color: #00ff90;
+    text-align: center;
+    font-weight: bold;
+
+    /* smooth transition */
+    transition: all 0.25s ease-in-out;
+
+    box-shadow:
+        0 0 0.4em rgba(0,255,144,0.3),
+        inset 0 0 0.4em rgba(0,255,144,0.25);
+}
+
+/* ✅ Glowing effect when textbox is focused (user typing) */
+input[type="number"]:focus {
+    outline: none;
+    border-color: #00ff90;
+    background: rgba(0, 255, 144, 0.15);
+    color: #fff;
+
+    box-shadow:
+        0 0 1em rgba(0,255,144,0.7),
+        0 0 2em rgba(0,255,144,0.5),
+        inset 0 0 0.8em rgba(0,255,144,0.4);
+}
+
+/* ✅ Glow slightly when value changes */
+input[type="number"]:not(:placeholder-shown) {
+    box-shadow:
+        0 0 0.8em rgba(0,255,144,0.6),
+        inset 0 0 0.6em rgba(0,255,144,0.3);
+}
+
   .section{background:var(--card);padding:12px;border-radius:10px;margin-top:12px;box-shadow:0 6px 20px rgba(0,255,144,0.04)}
   .small{color:#cfcfcf;font-size:0.9rem}
   .row{display:flex;gap:10px;flex-wrap:wrap;align-items:center;justify-content:center;margin-top:8px}
